# toldo

./: Cargo.toml  README.md
src/: args.rs  main.rs
src/cli/: mod.rs
src/tasks/: mod.rs  task.rs
src/tasks/file/: db.rs  file_path.rs  mod.rs
src/tui/: mod.rs
src/tui/back/: mod.rs
src/tui/interface/: mod.rs
