[package]
name = "toldo"
author = "Fernando Valentim Torres"
about = "A simple todo list"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.40", features = ["derive"]}
serde = {version = "1.0.219", features = ["derive"]}
directories = {version = "6.0.0"}
serde_json = "1.0.140"
ratatui = {version = "0.29.0", features = ["all-widgets"]}
crossterm = "0.29.0"
color-eyre = "0.6.5"
